--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-h1{
+th{
+    width: 500px;
+    height: 100px;
     background-color: black;
     color: white;
-    text-align: center;
-   
-}
-p{
+    font-size: 25px;
     text-align: center;
 }
+table,td{
+    background-color: rgb(226, 219, 219);
+    text-align: center;}
